# wilskeeb

./: .gitignore  .gitmodules  README.md
case/: kailh_keycap.FCStd
firmware/: Cargo.toml  Embed.toml  README.md  build.rs  keyboard-layout.json  memory.x
firmware/.cargo/: config  config.toml
firmware/.vim/: coc-settings.json
firmware/examples/: display-mockup.rs  playground.rs
firmware/src/: async_utils.rs  cli.rs  defmt.rs  inter_board.rs  intrinsics.rs  layout.rs  main.rs  matrix.rs  media_hid.rs  ui.rs  usb.rs  utils_async.rs  utils_time.rs
firmware/src/inter_board/: main.rs  secondary.rs
firmware/src/ui/: sh1107_wrapper.rs  widget.rs
pcb/: Readme.md  fp-lib-table  sym-lib-table  wilskeeb-cache.lib  wilskeeb.kicad_pcb  wilskeeb.kicad_prl  wilskeeb.kicad_pro  wilskeeb.kicad_sch
pcb/lib/: wilskeeb-parts.kicad_sym
pcb/lib/wilskeeb-parts.pretty/: Diode-Hybrid-Reversible.kicad_mod  Jack_3.5mm_TRRS_PJ320D_Reversible.kicad_mod  PG1350-1u-Reversible.kicad_mod  PinHeader_1x03_P2.54mm_Horizontal.kicad_mod  ProMicro-Reversible.kicad_mod  Resistor-Hybrid-Reversible.kicad_mod
