[package]
name = "wilskeeb"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Wilfried Chauveau <wilfried.chauveau@ithinuel.me>"]
description = "Firmware for Wil's keyboard"
readme = "../README.md"
homepage = "https://github.com/ithinuel/wilskeeb.git"
repository = "https://github.com/ithinuel/wilskeeb.git"
keywords = ["keyboard", "rp2040", "keyberon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7"

panic-probe = { version = "*", features = ["print-defmt"], optional = true }
panic-persist = { version = "*", optional = true }
panic-reset = { version = "*", optional = true }

embedded-hal = { version = "=1.0.0-alpha.8", features = [] }
embedded-hal-async = "0.1.0-alpha.1"
embedded-time = "0.12.0"
embedded-graphics = "0.7.0"
nb = "*"
either = { version = "*", default-features = false }

rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", features = ["rt", "eh1_0_alpha"] }
rp2040-boot2 = { git = "https://github.com/rp-rs/rp2040-boot2-rs", branch = "main" }
rp2040-async-i2c = { git = "https://github.com/ithinuel/rp2040-async-i2c" }

adafruit-featherwing-oled128x64 = { git = "https://github.com/ithinuel/sh1107-rs" }
i2c-pio = { git = "https://github.com/ithinuel/i2c-pio-rs" }
sh1107 = { git = "https://github.com/ithinuel/sh1107-rs" }
smart-leds = "0.3.0"
ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs" }

futures = { version = "0.3.19", default-features = false, features = ["async-await"] }
nostd_async = { version = "0.6.0", features = ["cortex_m"] }

usb-device = "*"
usbd-serial = "*"
keyberon = { git = "https://github.com/TeXitoi/keyberon.git" }

defmt = { version = "0.3.0", optional = true }
defmt-rtt = { version = "*", optional = true }
defmt-bbq = { version = "0.1.0", optional = true }
bbqueue = { version = "0.5.1", features = ["thumbv6"] }

arraydeque = { version = "*", default-features = false }
arrayvec = { version = "*", default-features = false }
num-integer = { version = "0.1.44", default-features = false }

[dev-dependencies]
embedded-graphics-simulator = "*"

[profile.release]
debug = 2
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"

[features]
default = ["standalone"]
standalone = ["defmt-bbq", "panic-persist", "defmt", "rp2040-hal/defmt"]
debug = ["defmt-rtt", "panic-probe", "defmt", "rp2040-hal/defmt"]
no-cli = [ "panic-reset" ]

[patch.crates-io]
rp2040-hal = { path = "../vendor/rp-hal/rp2040-hal" }
bbqueue = { git = "https://github.com/ithinuel/bbqueue.git", branch = "bump-to-cortex-m-0.7.0" }

[patch.'https://github.com/rp-rs/rp-hal']
rp2040-hal = { path = "../vendor/rp-hal/rp2040-hal" }

[patch.'https://github.com/ithinuel/i2c-pio-rs']
i2c-pio = { path = "../vendor/i2c-pio-rs" }

[patch.'https://github.com/ithinuel/rp2040-async-i2c']
rp2040-async-i2c = { path = "../vendor/rp2040-async-i2c" }

[patch.'https://github.com/ithinuel/ws2812-pio-rs']
ws2812-pio = { path = "../vendor/ws2812-pio-rs" }

[patch.'https://github.com/ithinuel/sh1107-rs']
sh1107 = { path = "../vendor/sh1107-rs/sh1107" }
adafruit-featherwing-oled128x64 = { path = "../vendor/sh1107-rs/adafruit-featherwing-oled128x64" }
