[package]
name = "wilskeeb"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Wilfried Chauveau <wilfried.chauveau@ithinuel.me>"]
description = "Firmware for Wil's keyboard"
readme = "../README.md"
homepage = "https://github.com/ithinuel/wilskeeb.git"
repository = "https://github.com/ithinuel/wilskeeb.git"
keywords = ["keyboard", "rp2040", "keyberon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
critical-section = "1.1.0"

panic-probe = { version = "0.3.0", features = ["print-defmt"], optional = true }
panic-persist = { version = "0.3.0", optional = true }
panic-reset = { version = "0.1.1", optional = true }

embedded-hal = { version = "=1.0.0-alpha.8", features = [] }
embedded-hal-async = "=0.1.0-alpha.1"
embedded-time = "0.12.1"
fugit = { version = "0.3.6", features = ["defmt"] }

# rp2040 hal & drivers
sparkfun-pro-micro-rp2040 = "0.4.0"
rp2040-async-i2c = { git = "https://github.com/ithinuel/rp2040-async-i2c" }
rp2040-hal = { version = "0.6.0", features = [
  "rt",
  "eh1_0_alpha",
  "rp2040-e5",
], default-features = false }

# UI deps
adafruit-featherwing-oled128x64 = { git = "https://github.com/ithinuel/sh1107-rs" }
embedded-graphics = "0.7.1"
i2c-pio = "0.4.0"
sh1107 = { git = "https://github.com/ithinuel/sh1107-rs" }
smart-leds = "0.3.0"
ws2812-pio = "0.4.0"

# async ftw
futures = { version = "0.3.23", default-features = false, features = [
  "async-await",
] }
nostd_async = { version = "0.6.0", features = ["cortex_m"] }

# usb related deps
frunk = { version = "0.4.0", default-features = false }
keyberon = { git = "https://github.com/TeXitoi/keyberon.git" }
num_enum = { version = "0.5.7", default-features = false }
usb-device = "0.2.9"
usbd-human-interface-device = "0.2.1"
usbd-serial = "0.1.1"

# logging
bbqueue = { version = "0.5.1", features = ["thumbv6"] }
defmt = { version = "0.3.2", optional = true }
defmt-bbq = { version = "0.1.0", optional = true }
defmt-rtt = { version = "0.3.2", optional = true }

# interkeyboard tools
arraydeque = { version = "0.4.5", default-features = false }
arrayvec = { version = "0.7.2", default-features = false }
either = { version = "1.8.0", default-features = false }
static_assertions = "1.1.0"

[dev-dependencies]
embedded-graphics-simulator = "0.3.0"

[profile.release]
debug = 1         # skip line info for cleaner probe-run output
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "s"

[features]
default = ["panic-reset"]
cli = []

debug-to-probe = ["defmt-rtt", "debug", "panic-probe"]
debug-to-cli = ["cli", "defmt-bbq", "debug", "panic-persist"]

debug = ["defmt", "rp2040-hal/defmt"]

[patch.crates-io]
bbqueue = { git = "https://github.com/ithinuel/bbqueue.git", branch = "bump-to-cortex-m-0.7.0" }
rp2040-hal = { path = "../vendor/rp-hal/rp2040-hal" }
ws2812-pio = { path = "../vendor/ws2812-pio-rs" }
i2c-pio = { path = "../vendor/i2c-pio-rs" }

[patch.'https://github.com/ithinuel/rp2040-async-i2c']
rp2040-async-i2c = { path = "../vendor/rp2040-async-i2c" }

[patch.'https://github.com/ithinuel/sh1107-rs']
sh1107 = { path = "../vendor/sh1107-rs/sh1107" }
adafruit-featherwing-oled128x64 = { path = "../vendor/sh1107-rs/adafruit-featherwing-oled128x64" }
